# ConfigFileParser

./: README.md
ConfigFileParser/: CMakeInitialzeCache.cmake  CMakeLists.txt  CommonCmakeLists.cmake  buildConfig.h.in  commonTestOpts.cmake
ConfigFileParser/dataaccess/: CMakeLists.txt
ConfigFileParser/dataaccess/include/: CMakeLists.txt  IFileReader.h  IJsonParser.h  dataaccessmodule.h  filereader.h
ConfigFileParser/dataaccess/src/: CMakeLists.txt  dataaccessmodule.cpp  filereader.cpp
ConfigFileParser/dataaccess/test/: CMakeLists.txt
ConfigFileParser/dataaccess/test/include/: CMakeLists.txt
ConfigFileParser/dataaccess/test/src/: CMakeLists.txt  FileReader_unittest.cpp
ConfigFileParser/include/: AppDef.h  CMakeLists.txt
ConfigFileParser/src/: CMakeLists.txt  main.cpp
build-ConfigFileParser-Desktop_Qt_5_12_12_MSVC2015_64bit-Debug/: CMakeCache.txt  ConfigFileParser.ilk  Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_12_12_MSVC2015_64bit-Debug/doc/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_12_12_MSVC2015_64bit-Debug/include/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_12_12_MSVC2015_64bit-Debug/res/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_12_12_MSVC2015_64bit-Debug/src/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/: CMakeCache.txt  ConfigFileParser  ConfigFileParser.cbp  Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/dataaccess/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/dataaccess/doc/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/dataaccess/include/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/dataaccess/res/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/dataaccess/src/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/dataaccess/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/doc/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/include/: Makefile  buildConfig.h  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/res/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/src/: Makefile  cmake_install.cmake
build-ConfigFileParser-Desktop_Qt_5_14_0_GCC_64bit-Debug/test/: Makefile  cmake_install.cmake
(+31 files in other folders)
